--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<!-- Spring Securiy dependancy -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
 		<!-- Thymeleaf dependency-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,6 +73,12 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>14.0.1</version>
+		</dependency>
+		<!-- Data generator -->
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.11</version>
 		</dependency>
 	</dependencies>
 
