--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 		<!-- Spring Securiy dependancy -->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-security</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!-- Thymeleaf dependency-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
