--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DATABASE CONFIG
-spring.datasource.url = jdbc:mysql://localhost/dance_school_database
+spring.datasource.url = jdbc:mysql://localhost/dance_school_database?verifyServerCertificate=false&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
