--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
+security.user.name=user
+security.user.password=password
 logging.level.org=off
 
